@@ -20,8 +20,8 @@
  */
 package net.sf.marineapi.nmea.parser;
 
+import net.sf.marineapi.nmea.sentence.SentenceId;
 import net.sf.marineapi.nmea.util.Direction;
-import net.sf.marineapi.nmea.util.SentenceId;
 
 /**
  * Abstract base class for sentence parsers that provide geographic position or
