@@ -21,9 +21,9 @@
 package net.sf.marineapi.nmea.parser;
 
 import net.sf.marineapi.nmea.sentence.RMBSentence;
+import net.sf.marineapi.nmea.sentence.SentenceId;
 import net.sf.marineapi.nmea.util.DataStatus;
 import net.sf.marineapi.nmea.util.Direction;
-import net.sf.marineapi.nmea.util.SentenceId;
 import net.sf.marineapi.nmea.util.Waypoint;
 
 /**
