@@ -18,7 +18,7 @@
  * You should have received a copy of the GNU Lesser General Public License
  * along with Java Marine API. If not, see <http://www.gnu.org/licenses/>.
  */
-package net.sf.marineapi.nmea.util;
+package net.sf.marineapi.nmea.sentence;
 
 /**
  * Talker defines the supported NMEA Talker IDs. Talker ID is the first two
@@ -26,7 +26,7 @@ package net.sf.marineapi.nmea.util;
  * 
  * @author Kimmo Tuukkanen
  * @version $Revision$
- * @see net.sf.marineapi.nmea.util.SentenceId
+ * @see net.sf.marineapi.nmea.sentence.SentenceId
  */
 public enum TalkerId {
     /** Autopilot - General */
